--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -1,6 +1,10 @@
 ﻿.radio-container input[type="radio"] {
     display: none;
 }
+#element::-webkit-scrollbar {
+    width: 1px;
+    background-color: red;
+}
 
 /* Оформление для кастомных радио кнопок */
 .radio-container label {
@@ -150,7 +154,7 @@
     border-left: 2px solid #808080;
     border-right: 2px solid #808080;
     padding-right: 10px;
-    overflow-x: scroll;
+    overflow-x: hidden;
 }
 .horizontal1 {
     border-top: 1px solid black;
@@ -192,7 +196,7 @@
         border-left: 2px solid #808080;
         border-right: 2px solid #808080;
         padding-right: 10px;
-        overflow-x: scroll;
+        overflow-x: hidden;
     }
     #Gesamtpreis {
         gap: 105px !important;
@@ -203,7 +207,6 @@
         display: flex;
     }
     #typeSylinder {
-        margin-top:5px;
         height: 15px;
         margin-left: -45px;
         width: 15px;
@@ -495,9 +498,10 @@
     }
 
     #sclusselInfo {
+        height: 50px;
         margin-left: 240px;
         padding: 5px;
-        width:auto;
+        width: auto;
         background: red;
         color: white;
         align-items: center;
@@ -516,8 +520,8 @@
         display: block;
     }
     .checkboxContainer > input[type="checkbox"] {
-        width: 20px;
-        height: 20px;
+        width: 25px;
+        height: 25px;
     }
 
     .TexCount {
@@ -562,10 +566,9 @@
     }
 
     .horizontal {
-        border-top: 1px solid black;
         display: flex;
         gap: 20px;
-        margin-left: 10px;
+        margin-left: 6px;
     }
     #hilfeImg{
         display:none;
@@ -582,25 +585,23 @@
        margin-right:20px;
     }
     #InfoValue {
-   
+        grid-template-rows: 50px;
         display: grid;
-        border-left: 2px solid grey;
-        border-right: 2px solid grey;
-        padding-right: 10px;
-        overflow-x: scroll;
+        border-left: 2px solid #808080;
+        border-right: 2px solid #808080;
+        overflow-x: hidden;
     }
 
     .checkboxContainer {
         display: grid;
-        gap: 200px;
+        align-items: end;
         transform: scale(0.7);
-        margin-top: 10px;
-        padding-bottom: 5px;
     }
 
     #ItemTur {
         gap: 5px;
         display: flex;
+        align-items: flex-end;
     }
 
     .TexCountTur {
@@ -632,6 +633,7 @@
 
     #add_And_Minus {
         background: red;
+        height: 45px;
     }
 
     #removeButtonTur {
@@ -1096,10 +1098,9 @@
     }
 
     .horizontal {
-        border-top: 1px solid black;
         display: flex;
         gap: 20px;
-        margin-left: 10px;
+        margin-left: 6px;
     }
 
     #TypeSelectTurItem {
@@ -1107,23 +1108,22 @@
     }
 
     #InfoValue {
+        grid-template-rows: 50px;
         display: grid;
-        border-left: 2px solid grey;
-        border-right: 2px solid grey;
-        padding-right: 10px;
-        overflow-x: scroll;
+        border-left: 2px solid #808080;
+        border-right: 2px solid #808080;
+        overflow-x: hidden;
     }
 
     .checkboxContainer {
         display: grid;
-        gap: 200px;
-        margin-top: 8px;
-        padding-bottom: 5px;
+        align-items: end;
     }
 
     #ItemTur {
         gap: 5px;
         display: flex;
+        align-items: flex-end;
     }
 
     .TexCountTur {
@@ -1156,6 +1156,7 @@
 
     #add_And_Minus {
         background: red;
+        height: 45px;
     }
 
     #removeButtonTur {
@@ -1285,6 +1286,7 @@
 
     #add_And_Minus {
         background: red;
+        height: 50px;
     }
 
     .modal-content {
@@ -1542,11 +1544,11 @@
 
 
     #InfoValue {
+        grid-template-rows: 50px;
         display: grid;
-        border-left: 2px solid grey;
-        border-right: 2px solid grey;
-        padding-right: 10px;
-        overflow-x: scroll;
+        border-left: 2px solid #808080;
+        border-right: 2px solid #808080;
+        overflow-x: hidden;
     }
 
     #InfoValue1 {
@@ -1555,7 +1557,7 @@
         border-left: 2px solid grey;
         border-right: 2px solid grey;
         padding-right: 10px;
-        overflow-x: scroll;
+        overflow-x: hidden;
     }
 
     #InformBar {
@@ -1813,6 +1815,7 @@
     }
 
     #sclusselInfo {
+        height: 50px;
         margin-left: 570px;
         padding: 5px;
         background: red;
@@ -1929,7 +1932,6 @@
     }
 
     #typeSylinder {
-        margin-top: 5px;
         margin-left: -15px;
         margin-right: 5px;
     }
@@ -1953,6 +1955,7 @@
     #ItemTur {
         gap: 5px;
         display: flex;
+        align-items: flex-end;
     }
 
     .TexCountTur {
@@ -2094,16 +2097,13 @@
 
     .checkboxContainer {
         display: grid;
-        gap: 200px;
-        margin-top: 15px;
-        padding-bottom: 13px;
+        align-items: end;
     }
 
     .horizontal {
-        border-top: 1px solid black;
         display: flex;
         gap: 20px;
-        margin-left: 10px;
+        margin-left: 6px;
     }
 
     .horizontal1 {
@@ -2113,8 +2113,8 @@
     }
 
     .checkboxContainer > input[type="checkbox"] {
-        width: 20px;
-        height: 20px;
+        width: 30px;
+        height: 28px;
     }
 
 
@@ -2379,6 +2379,7 @@
 
     #add_And_Minus {
         background: red;
+        height: 45px;
     }
 
     .modal-content {
@@ -2638,11 +2639,11 @@
 
 
     #InfoValue {
+        grid-template-rows: 50px;
         display: grid;
-        border-left: 2px solid grey;
-        border-right: 2px solid grey;
-        padding-right: 10px;
-        overflow-x: scroll;
+        border-left: 2px solid #808080;
+        border-right: 2px solid #808080;
+        overflow-x: hidden;
     }
 
     #InfoValue1 {
@@ -2651,7 +2652,7 @@
         border-left: 2px solid grey;
         border-right: 2px solid grey;
         padding-right: 10px;
-        overflow-x: scroll;
+        overflow-x: hidden;
     }
 
     #InformBar {
@@ -2911,6 +2912,7 @@
     }
 
     #sclusselInfo {
+        height: 50px;
         margin-left: 800px;
         padding: 5px;
         background: red;
@@ -3028,7 +3030,6 @@
     }
 
     #typeSylinder {
-        margin-top: 5px;
         margin-left: 30px;
         margin-right: 10px;
     }
@@ -3053,6 +3054,7 @@
     #ItemTur {
         gap: 5px;
         display: flex;
+        align-items: flex-end;
     }
 
     .TexCountTur {
@@ -3062,6 +3064,7 @@
         grid-template-columns: 30px;
         background-color: #EDEDED;
         padding: 5px;
+        align-items: self-end;
     }
 
     .TexCountTurFinisher {
@@ -3087,6 +3090,7 @@
     }
 
     #inputTur {
+        height: 30px;
         padding: 5px;
         max-width: 200px;
     }
@@ -3190,16 +3194,14 @@
 
     .checkboxContainer {
         display: grid;
-        gap: 200px;
-        margin-top: 15px;
-        padding-bottom: 13px;
+        align-items: end;
     }
 
     .horizontal {
-        border-top: 1px solid black;
+        align-items: flex-end;
+        height: 40px;
         display: flex;
-        gap: 20px;
-        margin-left: 10px;
+        gap: 10px;
     }
 
     .horizontal1 {
@@ -3209,8 +3211,8 @@
     }
 
     .checkboxContainer > input[type="checkbox"] {
-        width: 20px;
-        height: 20px;
+        width: 30px;
+        height: 28px;
     }
 
 
