--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
@@ -77,12 +77,13 @@
                 </div>
 
                 <div id="productOptions">
+
                     @if (ViewBag.optionV == true)
                     {
                         @foreach (var options in ViewBag.Options)
                         {
                             r++;
-                            <div class="input-block">
+                            <div class="input-block-@r">
                                 <h2>Optionen</h2>
                                 <div class="form-group">
                                     <label class="control-label">Optionen Name</label>
@@ -120,8 +121,14 @@
                                             <input type="text" placeholder="Price" name="costNGF" value="@ViewBag.OptionValue[f].Cost" class="form-control" />
                                         }
                                     </div>
+
                                     <input type="hidden" id="counter" name="inputCounter" />
                                 </div>
+                                <hr/>
+                                <br />
+                                <button class="btn btn-danger" onclick="deleteOption(@r)" type="button">Löschen</button>
+                                <hr />
+                                <br />
                             </div>
                         }
                     }
@@ -166,6 +173,13 @@
             await Html.RenderPartialAsync("_ValidationScriptsPartial");
         }
         <script>
+
+            function deleteOption(id) 
+            {
+                let optionBlock = document.getElementsByClassName("input-block-" + id)[0];
+
+                optionBlock.remove();
+            }
 
             tinymce.init({
                 selector: '#discriptions',
@@ -430,10 +444,14 @@
                     }
                 });
 
-                function createBlock() {
+                function createBlock() 
+                {
+                    let countItem = @r + blockCounter;
                     const block = document.createElement('div');
-                    block.classList.add('input-block');
+                    block.classList.add(`input-block-${countItem}`);
                     block.id = `block-${blockCounter}`;
+
+
                     block.innerHTML = `<div>
                                                                                                 <h1>Options</h1>
                                                                                                 <label>Name</label>
@@ -456,7 +474,14 @@
                                                                                                     </div>
                                                                                                        <input type="hidden" id="counter" name="inputCounter" />
                                                                                                 </div>
-                                                                                            </div>`;
+                                                                                            </div>
+                                                                                                         <hr/>
+                                                                                                          <br />
+                                                                                                           <button class="btn btn-danger" onclick="deleteOption(${countItem})" 	type="button">Löschen</button>
+                                                                                                          <hr />
+                                                                                                          <br />
+
+                                                                                            `;
 
                     blockCounter++;
 
