--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Hebel.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Hebel.cshtml
@@ -62,7 +62,7 @@
                         @foreach (var options in ViewBag.Options)
                         {
                             r++;
-                            <div class="input-block">
+                            <div class="input-block-@r">
                                 <h2>Options</h2>
                                 <div class="form-group">
                                     <label class="control-label">Options Name</label>
@@ -102,6 +102,11 @@
                                     </div>
                                     <input type="hidden" id="counter" name="inputCounter" />
                                 </div>
+                                <hr />
+                                <br />
+                                <button class="btn btn-danger" onclick="deleteOption(@r)" type="button">Löschen</button>
+                                <hr />
+                                <br />
                             </div>
                         }
                     }
@@ -125,6 +130,13 @@
             await Html.RenderPartialAsync("_ValidationScriptsPartial");
         }
         <script>
+
+            function deleteOption(id) 
+            {
+                let optionBlock = document.getElementsByClassName("input-block-" + id)[0];
+
+                optionBlock.remove();
+            }
 
             tinymce.init({
                 selector: '#exampleFormControlTextarea1',
@@ -228,9 +240,11 @@
 
 
 
-                function createBlock() {
+                function createBlock() 
+                {
+                    let countItem = @r+blockCounter;
                     const block = document.createElement('div');
-                    block.classList.add('input-block');
+                    block.classList.add(`input-block-${countItem}`);
                     block.id = `block-${blockCounter}`;
                     block.innerHTML = `<div>
                                                                                     <h1>Options</h1>
@@ -253,7 +267,12 @@
                                                                                         </div>
                                                                                         <input type="hidden" id="counter" name="inputCounter" />
                                                                                     </div>
-                                                                                </div>`;
+                                                                                </div>
+                                                                                   <hr/>
+                                                                                  <br />
+                                                                                     <button class="btn btn-danger" onclick="deleteOption(${countItem})" 	type="button">Löschen</button>
+                                                                                  <hr />
+                                                                                  <br />`;
 
                     blockCounter++;
 
