--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Vorhangschloss.cshtml
@@ -71,7 +71,7 @@
                         @foreach (var options in ViewBag.Options)
                         {
                             r++;
-                            <div class="input-block">
+                            <div class="input-block-@r">
                                 <h2>Options</h2>
                                 <div class="form-group">
                                     <label class="control-label">Options Name</label>
@@ -111,6 +111,12 @@
                                     </div>
                                     <input type="hidden" id="counter" name="inputCounter" />
                                 </div>
+
+                                <hr />
+                                <br />
+                                <button class="btn btn-danger" onclick="deleteOption(@r)" type="button">Löschen</button>
+                                <hr />
+                                <br />
                             </div>
                         }
                     }
@@ -134,6 +140,13 @@
             await Html.RenderPartialAsync("_ValidationScriptsPartial");
         }
         <script>
+
+            function deleteOption(id) 
+            {
+                let optionBlock = document.getElementsByClassName("input-block-" + id)[0];
+
+                optionBlock.remove();
+            }
 
             tinymce.init({
                 selector: '#exampleFormControlTextarea1',
@@ -264,9 +277,11 @@
                     }
                 });
 
-                function createBlock() {
+                function createBlock() 
+                {
+                    let countItem = @r+blockCounter;
                     const block = document.createElement('div');
-                    block.classList.add('input-block');
+                    block.classList.add(`input-block-${countItem}`);
                     block.id = `block-${blockCounter}`;
                     block.innerHTML = `<div>
                                                                                     <h1>Options</h1>
@@ -289,7 +304,13 @@
                                                                                         </div>
                                                                                          <input type="hidden" id="counter" name="inputCounter" />
                                                                                     </div>
-                                                                                </div>`;
+                                                                                </div>
+                                                                                            <hr/>
+                                                                                                              <br />
+                                                                                                                       <button class="btn btn-danger" onclick="deleteOption(${countItem})" 	type="button">Löschen</button>
+                                                                                                              <hr />
+                                                                                                              <br />
+                                                                                `;
 
                     blockCounter++;
                     return block;
