--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -3031,18 +3031,18 @@
 
     #typeSylinder {
         margin-left: 30px;
-        margin-right: 10px;
+        margin-right: 30px;
     }
 
     #sclusselInfo2 {
         height: 100px;
         width: 800px;
         padding: 5px;
-        background: red;
-        color: white;
+        background: #f00;
+        color: #fff;
         align-items: center;
         display: grid;
-        grid-template-columns: 100px 250px 180px 140px 50px;
+        grid-template-columns: 70px 250px 160px 170px 50px;
         margin-top: -100px;
     }
 
@@ -3092,7 +3092,7 @@
     #inputTur {
         height: 30px;
         padding: 5px;
-        max-width: 200px;
+        max-width: 150px;
     }
 
     #counterTur {
